# Arto

backend/: pyproject.toml
backend/src/: config.py  main.py
backend/src/auth/: dependencies.py  models.py  repository.py  schemas.py  service.py
backend/src/auth/utils/: tokens.py
backend/src/core/: database.py  decorators.py  dependencies.py  exceptions.py  repository.py  service.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/api/: client.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ThemeProvider.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  MainLayout.tsx
frontend/src/theme/: theme.ts
